ecmascript/parser/tests/typescript-errors/tsc/typings/typingsSuggestion2/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/typings/typingsSuggestion2/input.ts:2:20
  |
2 | { "compilerOptions": {} }
  |                    ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/typings/typingsSuggestion2/input.ts:2:3
  |
2 | { "compilerOptions": {} }
  |   ^^^^^^^^^^^^^^^^^

